--- a/serverAuth/authLoginReactJS/auth-node-logic/package.json
+++ b/serverAuth/authLoginReactJS/auth-node-logic/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.2.7",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
